kubernetes/observability/grafana/overlays/workload-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - name: internal
      namespace: main-gateway
      sectionName: https-grafana
  hostnames:
    - "grafana.yuriy-lab.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
